--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,37 @@
   "description": "CS-524 Final Project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "format:check": "prettier --check .",
+    "format:write": "prettier --write .",
+    "lint:check": "eslint .",
+    "lint:fix": "eslint --fix .",
+    "test": "jest",
+    "start": "node inedx.js",
+    "dev": "nodemon index.js",
+    "precommit": "lint-staged"
   },
   "author": "Aman Khalfay, Apoorva Pandey, Aaditi Patange, Siddharth Gulati",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "eslint-config-prettier": "^8.4.0",
+    "express": "^4.17.1",
+    "moment": "^2.29.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.9.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.8",
+    "nodemon": "^2.0.15",
+    "prettier": "2.5.1"
+  },
+  "husky": {
+    "hooks": {
+      "precommit": "npm precommit"
+    }
+  }
 }
