--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,9 @@
     "dotenv": "^16.0.0",
     "eslint-config-prettier": "^8.4.0",
     "express": "^4.17.1",
-    "moment": "^2.29.1"
+    "moment": "^2.29.1",
+    "mongodb": "^3.6.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "^8.9.0",
