--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,7 @@
 		"react-feather": "^2.0.9",
 		"react-router-dom": "^5.1.2",
 		"react-scripts": "^3.4.3",
-		"reactjs-popup": "^2.0.5",
+		"uuid": "^8.3.2",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
