--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,11 @@
     "firebase-admin": "^10.1.0",
     "moment": "^2.29.1",
     "mongodb": "^3.6.2",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "bluebird": "^3.4.7",
+    "flat": "^2.0.1",
+    "node-redis": "^0.1.7",
+    "redis": "^3.0.2"
   },
   "devDependencies": {
     "eslint": "^8.9.0",
