--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
 		"react-router-dom": "^5.1.2",
 		"react-s3": "^1.3.1",
 		"react-scripts": "^3.4.3",
+		"redis": "^4.1.0",
 		"uuid": "^8.3.2",
 		"web-vitals": "^2.1.4"
 	},
