--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
 		"react": "^16.13.0",
 		"react-bootstrap": "^2.3.1",
 		"react-dom": "^16.13.0",
+		"react-error-overlay": "^6.0.9",
 		"react-feather": "^2.0.9",
 		"react-router-dom": "^5.1.2",
 		"react-s3": "^1.3.1",
