--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,12 @@
 		"aws-sdk": "^2.1135.0",
 		"axios": "^0.27.2",
 		"bootstrap": "^5.1.3",
+		"chart.js": "^3.7.1",
 		"dotenv": "^16.0.1",
 		"firebase": "^7.23.0",
 		"react": "^16.13.0",
 		"react-bootstrap": "^2.3.1",
+		"react-chartjs-2": "^4.1.0",
 		"react-dom": "^16.13.0",
 		"react-error-overlay": "^6.0.9",
 		"react-feather": "^2.0.9",
