:pencil2: Start script typo fixed

--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
     "lint:check": "eslint .",
     "lint:fix": "eslint --fix .",
     "test": "jest",
-    "start": "node inedx.js",
+    "start": "node index.js",
     "dev": "nodemon index.js",
     "precommit": "lint-staged"
   },
