--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,8 @@
 		"react-scripts": "^3.4.3",
 		"redis": "^4.1.0",
 		"uuid": "^8.3.2",
-		"web-vitals": "^2.1.4"
+		"web-vitals": "^2.1.4",
+		"xss": "^1.0.11"
 	},
 	"scripts": {
 		"start": "react-scripts start",
